--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  dotted_line: ^3.2.2
   flutter:
     sdk: flutter
 
@@ -38,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   math_expressions: ^2.4.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
